--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,5 +2,11 @@
   "tasks": {
     "dev": "deno run --watch --allow-env --allow-sys --allow-read --allow-net main.ts",
     "start": "deno run --allow-env --allow-sys --allow-read --allow-net main.ts"
+  },
+  "imports": {
+    "compression": "https://esm.sh/compression@1.7.4",
+    "cors": "https://esm.sh/cors@2.8.5",
+    "express": "https://esm.sh/express@4.18.2",
+    "express-serve-static-core": "https://esm.sh/express-serve-static-core@0.1.1"
   }
 }
