--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-env --allow-sys --allow-read --allow-net main.ts",
-    "start": "deno run --allow-env --allow-sys --allow-read --allow-net main.ts"
+    "dev": "deno run --watch --allow-env --allow-sys --allow-read --allow-net src/main.ts",
+    "start": "deno run --allow-env --allow-sys --allow-read --allow-net src/main.ts"
   },
   "imports": {
     "utils": "./src/utils/index.ts",
