--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,8 +5,10 @@
   },
   "imports": {
     "utils": "./src/utils/index.ts",
+    "material": "./src/material/index.ts",
     "compression": "https://esm.sh/compression@1.7.4",
     "cors": "https://esm.sh/cors@2.8.5",
+    "chroma-js": "https://esm.sh/chroma-js@2.4.2",
     "express": "https://esm.sh/express@4.18.2",
     "express-serve-static-core": "https://esm.sh/express-serve-static-core@0.1.1",
     "@material/material-color-utilities": "https://esm.sh/@material/material-color-utilities@0.2.7"
